[gd_scene load_steps=6 format=3 uid="uid://b5gmt6duwd8ox"]

[ext_resource type="Script" path="res://Scenes/Blueprints/stats.gd" id="1_fac1a"]
[ext_resource type="Texture2D" uid="uid://bp471q4mtq3ti" path="res://Assets/placeholder-icons.png" id="2_rx8an"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ltmgd"]
bg_color = Color(0.881937, 0.881937, 0.881937, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tdsmi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2t18h"]
atlas = ExtResource("2_rx8an")
region = Rect2(-0.0251999, 12.6898, 31.2151, 27.3504)

[node name="Stats" type="Control"]
layout_mode = 3
anchor_right = 0.228
anchor_bottom = 0.101
offset_right = 3.34399
offset_bottom = 4.55199
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fac1a")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ltmgd")

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10

[node name="StatName" type="Label" parent="Panel/VBoxContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "STATNAME"

[node name="Panel2" type="Panel" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 37)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tdsmi")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/Panel2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="StatTexture" type="TextureRect" parent="Panel/VBoxContainer/Panel2/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(40, 10)
layout_mode = 2
texture = SubResource("AtlasTexture_2t18h")
expand_mode = 1

[node name="Value" type="MarginContainer" parent="Panel/VBoxContainer/Panel2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="ValueLabel" type="Label" parent="Panel/VBoxContainer/Panel2/HBoxContainer/Value"]
layout_mode = 2
text = "999"
